--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <!-- INPUT RADIO BUTTONS  -->
     <div class="columns has-text-centered">
         <div class="column">
-            <input type="radio" id="local1" name="local" checked ref='radioMundo'><label for="local1">Mundo</label>
-            <input type="radio" id="local2" name="local" id="radioBrasil"><label for="local2">Brasil</label>
+            <input type="radio" id="local1" name="local" checked ref='radioMundo' v-on:change="getNumbers()"><label for="local1">Mundo</label>
+            <input type="radio" id="local2" name="local" id="radioBrasil" v-on:change="getNumbers()"><label for="local2">Brasil</label>
         </div>
         </div>
         <div class="columns">
