--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <div class="column has-text-centered">
             <figure>
-                <img src="img/world.svg" alt="">
+                <img :src="theimage" alt="">
             </figure>
         </div>
         <div class="column" style="padding-left: 15%;">
