--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             Developed by <a href="https://mrsamwell.github.io" target="_blank" class="has-text-info">@MrSamwell</a>.<br>
             Made with Bulma.
           </p>
+          <p class="is-size-7" style="opacity: 0.5;">Atualizado  {{apiData.Date}}</p>
         </div>
       </footer>
 
