--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="column" style="padding-left: 15%;">
             <ul>
                 <li>
-                    <i class="fas fa-skull icone" style="color: #FF5555; height: 16px; width: 18px;"></i>
+                    <i class="fas fa-skull icone" style="color: rgb(168, 54, 54); height: 16px; width: 18px;"></i>
                     <span class="has-text-weight-bold">{{deaths}}</span> Baixas.
                 </li>
                 <li>
@@ -48,7 +48,7 @@
                     <span class="has-text-weight-bold">{{cases}}</span>  Casos.
                 </li>
                 <li>
-                    <i class="fas fa-pills icone" style="color: #6AAB53;"></i>
+                    <i class="fas fa-pills icone" style="color: rgb(82, 131, 64);"></i>
                     <span class="has-text-weight-bold">{{recovered}}</span>
                     Recuperados.
                 </li>
