--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <div class="column has-text-centered">
             <figure>
-                <img :src="theimage" alt="">
+                <img :src="theimage" alt="" style="height: 150px; width: 150px;">
             </figure>
         </div>
         <div class="column" style="padding-left: 15%;">
