--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             <ul>
                 <li>
                     <i class="fas fa-skull icone" style="color: rgb(168, 54, 54); height: 16px; width: 18px;"></i>
-                    <span class="has-text-weight-bold">{{deaths}}</span> Baixas.
+                    <span class="has-text-weight-medium">{{deaths}}</span> Baixas.
                 </li>
                 <li>
                     <i class="fas fa-folder-open icone" style="color: #948742"></i>
-                    <span class="has-text-weight-bold">{{cases}}</span>  Casos.
+                    <span class="has-text-weight-medium">{{cases}}</span>  Casos.
                 </li>
                 <li>
                     <i class="fas fa-pills icone" style="color: rgb(82, 131, 64);"></i>
-                    <span class="has-text-weight-bold">{{recovered}}</span>
+                    <span class="has-text-weight-medium">{{recovered}}</span>
                     Recuperados.
                 </li>
             </ul>
@@ -84,7 +84,7 @@
             Developed by <a href="https://mrsamwell.github.io" target="_blank" class="has-text-info">@MrSamwell</a>.<br>
             Made with Bulma.
           </p>
-          <p class="is-size-7" style="opacity: 0.5;">Atualizado  {{apiData.Date}}</p>
+          <p class="is-size-7" style="opacity: 0.5;">Atualizado  {{lastUpdate}}</p>
         </div>
       </footer>
 
