--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             <ul>
                 <li>
                     <i class="fas fa-skull icone" style="color: rgb(168, 54, 54); height: 16px; width: 18px;"></i>
-                    <span class="has-text-weight-medium">{{deaths}}</span> Baixas.
+                    <span class="has-text-weight-medium">{{toLocaleString(deaths)}}</span> Baixas.
                 </li>
                 <li>
                     <i class="fas fa-folder-open icone" style="color: #948742"></i>
-                    <span class="has-text-weight-medium">{{cases}}</span>  Casos.
+                    <span class="has-text-weight-medium">{{toLocaleString(cases)}}</span>  Casos.
                 </li>
                 <li>
                     <i class="fas fa-pills icone" style="color: rgb(82, 131, 64);"></i>
-                    <span class="has-text-weight-medium">{{recovered}}</span>
+                    <span class="has-text-weight-medium">{{toLocaleString(recovered)}}</span>
                     Recuperados.
                 </li>
             </ul>
