--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- WORLD/BRAZIL VECTOR -->
     <div class="columns " ref='contentBox'>
         
-        <div class="column has-text-centered">
+        <div class="column has-text-centered-touch has-text-right-desktop">
             <figure>
                 <img :src="theimage" alt="" style="height: 150px; width: 150px;">
             </figure>
