--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <img :src="theimage" alt="" style="height: 150px; width: 150px;">
             </figure>
         </div>
+        <!-- Informations -->
         <div class="column" style="padding-left: 15%;">
             <ul>
                 <li>
@@ -55,28 +56,6 @@
             </ul>
         </div>
     </div>
-
-    <!-- INFORMATIONS
-    <div class="columns is-mobile">
-        <div class="column" style="padding-left: 15%;">
-            <ul>
-                <li>
-                    <i class="fas fa-skull icone" style="color: #FF5555;"></i>
-                    <span class="has-text-weight-bold">200</span> Baixas.
-                </li>
-                <li>
-                    <i class="fas fa-folder-open icone" style="color: #948742"></i>
-                    <span class="has-text-weight-bold">2000</span>  Casos.
-                </li>
-                <li>
-                    <i class="fas fa-pills icone" style="color: #6AAB53;"></i>
-                    <span class="has-text-weight-bold">1000</span>
-                    Recuperados.
-                </li>
-            </ul>
-        </div>
-    </div> -->
-
     <!-- FOOTER  -->
     <footer class="footer no-background" style="padding-top: 25px; padding-bottom: 10px;">
         <div class="content has-text-centered has-text-grey">
